# Jobify_platform

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8ae7f6812dba_.py  e099ebf2d3d1_adding_jobs_table_and_the_user_tables.py  f22ad2240032_add_users_table.py
app/: main.py
app/api/routes/: auth.py  job.py
app/core/: config.py  security.py
app/db/: database.py
app/models/: __init__.py  user.py
app/schemas/: job.py  user.py
app/services/: auth_service.py  job_service.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: job.py
backend/app/core/: config.py  deps.py
backend/app/models/: job.py
backend/app/schemas/: job.py
backend/app/services/: auth_service.py  job_service.py
backend/pipeline/scrapers/: greenhouse.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_jobs.py  test_security.py
frontend/: package-lock.json
