[project]
name = "jobify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "cryptography>=49.0.0",
    "fastapi[standard]>=0.139.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.51",
]
